--- a/public/themes/frontend/watches/pocomart.mysapo.net/samsung-galaxy-note-21.html
+++ b/public/themes/frontend/watches/pocomart.mysapo.net/samsung-galaxy-note-21.html
@@ -14,7 +14,8 @@
 		<link rel="dns-prefetch" href="http://www.google-analytics.com/">
 		<link rel="dns-prefetch" href="http://www.googletagmanager.com/">
 
-		<link rel="icon" href="../bizweb.dktcdn.net/100/429/689/themes/869367/assets/favicon2c6f.png?1697597694844" type="image/x-icon" /><link rel="apple-touch-icon" href="../bizweb.dktcdn.net/100/429/689/themes/869367/assets/favicon2c6f.png?1697597694844">
+		<link rel="icon" href="../bizweb.dktcdn.net/100/429/689/themes/869367/assets/favicon2c6f.png?1697597694844" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="../bizweb.dktcdn.net/100/429/689/themes/869367/assets/favicon2c6f.png?1697597694844">
 		<meta name="robots" content="noodp,index,follow" />
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">	
 		<meta name="description" content="Samsung là một trong những nhà sản xuất dẫn đầu trên thị trường điện thoại thông minh nhiều năm qua. Sau thành công của dòng Galaxy S20 series, Samsung đã trở lại và tiếp tục khẳng định vị thế cho dòng flagship cao cấp của mình. Dòng Galaxy S21 series đánh dấu bước nhảy vọt với những công nghệ tiên tiến nhất hiện nay. ">
